--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>El Pantheon de Pan</title>
+
+    <meta name="keywords" content="panaderia con servicio a domicilio en valencia">
+    <meta name="description" content="La mejor panadería de Valencia. Pan recién horneado, crujiente por fuera y suave por dentro."
+
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/assets/twemoji_bread (1).svg" type="image/x-icon">
+
 </head>
 <body>
     
