Estilos de navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="panaderia con servicio a domicilio en valencia">
     <meta name="description" content="La mejor panadería de Valencia. Pan recién horneado, crujiente por fuera y suave por dentro."
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="/assets/twemoji_bread (1).svg" type="image/x-icon">
 
 </head>
@@ -17,8 +17,8 @@
 
     <!-- Barra de navegacion o navder -->
     <header>
-        <nav>
-            <ul>
+        <nav class="encabezado">
+            <ul class="navbar_list"> 
                 <li>Inicio</li>
                 <li>Menú</li>
                 <li>Localizacion</li>
@@ -215,7 +215,6 @@
     
     <!-- Footer o final de la pagina -->
     <footer>
-
     </footer>
 
 </body>
