Creacion de footer

--- a/index.html
+++ b/index.html
@@ -219,6 +219,64 @@
 
     <!-- Footer o final de la pagina -->
     <footer>
+        <div>
+
+        <div>
+        </div>
+        <p>
+            Get in Touch with Us
+        </p>
+        <div>
+        </div>
+        </div>
+
+        <div>
+            <div>
+                <h5>Merchandise</h5>
+                <ul>
+                    <li>
+                        <p>T-shirts</p>
+                    </li>
+                    <li>
+                        <p>Caps</p>
+                    </li>
+                    <li>
+                        <p>Masks</p>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h5>Franchise</h5>
+                <ul>
+                    <li>
+                        <P>Coffee Outlet</P>
+                    </li>
+                    <li>
+                        <p>Coffee Vending Machine</p>
+                    </li>
+                    <li>
+                        <p>Contact Us</p>
+                    </li>
+                </ul>    
+            </div>
+            <div>
+                <h5>About Us</h5>
+                <ul>
+                    <li>
+                        <p>Promotions</p>
+                    </li>
+                    <li>
+                        <p>Customer Care</p>
+                    </li>
+                    <li>
+                        <p>Legal Information</p>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h5>Follow Us</h5>
+            </div>
+        </div>
     </footer>
 
 </body>
