Organizacion de tarjetas entre otras

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     </div>
 
     <!-- Cuerpo de la pagina como los menu y titulos  -->
-    <main >
+    <main>
         <section>
             <h2>FAVORITOS DE LA CASA</h2>
             <ul class="seccion_menu_1">
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Pastel Bañado En Chocolate.jpg" alt="">
                     <div>
                         <h3>Chocolate Covered Cake</h3>
                         <p>$7.99</p>
@@ -54,7 +54,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Croissant.jpg" alt="">
                     <div>
                         <h3>Croissant</h3>
                         <p>$7.99</p>
@@ -63,7 +63,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Palmeras Bañadas En Chocolate.jpg" alt="">
                     <div>
                         <h3>Chocolate Dipped Palm Trees</h3>
                         <p>$12.99</p>
@@ -72,7 +72,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Cinnabon.jpg" alt="">
                     <div>
                         <h3>Cinnamon Glazed Roll</h3>
                         <p>$12.99</p>
@@ -87,7 +87,7 @@
             <h2>DISFRUTA DE UN BUEN CAFE</h2>
             <ul class="seccion_menu_2">
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Cappuccino.jpg" alt="">
                     <div>
                         <h3>Cappuccino</h3>
                         <p>Coffee 50% | Milk 50%</p>
@@ -97,7 +97,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Chai Latte.jpg" alt="">
                     <div>
                         <h3>Chai Latte</h3>
                         <p>Coffee 50% | Milk 50%</p>
@@ -107,7 +107,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Macchiato.jpg" alt="">
                     <div>
                         <h3>Macchiato</h3>
                         <p>Coffee 50% | Milk 50%</p>
@@ -117,7 +117,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Expresso.jpg" alt="">
                     <div>
                         <img src="" alt="">
                         <div>
@@ -140,7 +140,7 @@
             <h2>BEBIDAS RECOMENDADAS</h2>
             <ul class="seccion_menu_3">
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Te Matcha.jpg" alt="">
                     <div>
                         <h3>Té Matcha</h3>
                         <p>$6.99</p>
@@ -149,7 +149,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Milkshake Oreo.jpg" alt="">
                     <div>
                         <h3>Milkshake Oreo</h3>
                         <p>$12.99</p>
@@ -157,7 +157,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Smoothie Strawberry.jpg" alt="">
                     <div>
                         <h3>Strawberry Smoothie</h3>
                         <p>$9.99</p>
@@ -165,7 +165,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Nutella Smoothie.jpg" alt="">
                     <div>
                         <h3>Nutella Smoothie</h3>
                         <p>$12.99</p>
@@ -178,7 +178,7 @@
             <h2>TOP 1 EN POSTRES</h2>
             <ul class="seccion_menu_4">
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Red Velvet Cake.jpg" alt="">
                     <div>
                         <h3>Red Velvet Cake</h3>
                         <p>$10.00</p>
@@ -187,7 +187,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Brownie.jpg" alt="">
                     <div>
                         <h3>Brownie</h3>
                         <p>8.99</p>
@@ -196,7 +196,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Chocolate Cake.jpg" alt="">
                     <div>
                         <h3>Chocolate Cake</h3>
                         <p>$12.99</p>
@@ -205,7 +205,7 @@
                 </li>
 
                 <li>
-                    <img src="" alt="">
+                    <img src="/assets/Strawberry Cupcake.jpg" alt="">
                     <div>
                         <h3>Strawberry Cupcake</h3>
                         <p>$5.99</p>
@@ -218,22 +218,20 @@
     </main>
 
     <!-- Footer o final de la pagina -->
-    <footer>
-        <div>
+    <footer class="footer">
+        <div class="encabezado_footer">
 
-        <div>
-        </div>
-        <p>
-            Get in Touch with Us
-        </p>
-        <div>
-        </div>
+            <div class="line"></div>
+            <p>
+                Get in Touch with Us
+            </p>
+            <div class="line"></div>
         </div>
 
-        <div>
+        <div class="footer_explore">
             <div>
-                <h5>Merchandise</h5>
                 <ul>
+                    <h5>Merchandise</h5>
                     <li>
                         <p>T-shirts</p>
                     </li>
@@ -246,8 +244,8 @@
                 </ul>
             </div>
             <div>
-                <h5>Franchise</h5>
                 <ul>
+                    <h5>Franchise</h5>
                     <li>
                         <P>Coffee Outlet</P>
                     </li>
@@ -257,11 +255,11 @@
                     <li>
                         <p>Contact Us</p>
                     </li>
-                </ul>    
+                </ul>
             </div>
             <div>
-                <h5>About Us</h5>
                 <ul>
+                    <h5>About Us</h5>
                     <li>
                         <p>Promotions</p>
                     </li>
