--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="/assets/twemoji_bread (1).svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 
 </head>
 
